[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
gobject-sys = "0.8.0"
glib-sys = "0.8.0"
libc = "0.2"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
v2_30 = []
dox = []

[lib]
name = "atk_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libatk-1"
homepage = "http://gtk-rs.org/"
keywords = ["atk", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "atk"
name = "atk-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.8.0"
