[build-dependencies]
pkg-config = "0.3.5"

[dependencies]
bitflags = "0.3"
libc = "0.1"
glib-sys = "0.2.1"
gobject-sys = "0.2.1"
gio-sys = "0.2.1"

[lib]
name = "gdk_pixbuf_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to gdk-pixbuf"
documentation = "http://gtk-rs.org/docs/gdk_pixbuf_sys"
homepage = "http://gtk-rs.org/"
keywords = ["gdk-pixbuf", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "gdk_pixbuf"
name = "gdk-pixbuf-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.2.1"
