[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
gobject-sys = "0.4.0"
glib-sys = "0.4.0"
libc = "0.2"
bitflags = "1.0"
gio-sys = "0.4.0"

[features]
dox = []
v2_28 = []
v2_30 = ["v2_28"]
v2_32 = ["v2_30"]
v2_36 = ["v2_32"]

[lib]
name = "gdk_pixbuf_sys"

[package]
name = "gdk-pixbuf-sys"
license = "MIT"
homepage = "http://gtk-rs.org/"
links = "gdk_pixbuf"
authors = ["The Gtk-rs Project Developers"]
description = "FFI bindings to libgdk_pixbuf-2.0"
version = "0.4.0"
keywords = ["gdk-pixbuf", "ffi", "gtk-rs", "gnome"]
repository = "https://github.com/gtk-rs/sys"
build = "build.rs"
