[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
gio-sys = "0.8.0"
glib-sys = "0.8.0"
gobject-sys = "0.8.0"
libc = "0.2"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
v2_32 = []
v2_36 = ["v2_32"]
v2_36_8 = ["v2_36"]
dox = []

[lib]
name = "gdk_pixbuf_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libgdk_pixbuf-2.0"
homepage = "http://gtk-rs.org/"
keywords = ["gdk-pixbuf", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "gdk_pixbuf"
name = "gdk-pixbuf-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.8.0"
