[package]
name = "gdk-sys-test"
version = "0.1.0"
authors = ["Tomasz Miąsko <tomasz.miasko@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
glib-sys = { path = "../glib-sys" }
gdk-sys = { path = "../gdk-sys" }
libc = "0.2"

[build-dependencies]
ctest = { git = "https://github.com/tmiasko/gir-ctest", branch = "master" }
shell-words = "0.1.0"

