[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
cairo-sys-rs = "0.7.0"
gdk-pixbuf-sys = "0.7.0"
gio-sys = "0.7.0"
glib-sys = "0.7.0"
gobject-sys = "0.7.0"
pango-sys = "0.7.0"
libc = "0.2"

[dev-dependencies]
shell-words = "0.1.0"
tempdir = "0.3"

[features]
dox = []
v3_16 = []
v3_18 = ["v3_16"]
v3_20 = ["v3_18"]
v3_22 = ["v3_20"]
v3_24 = ["v3_22"]

[lib]
name = "gdk_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libgdk-3"
homepage = "http://gtk-rs.org/"
keywords = ["gdk", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "gdk"
name = "gdk-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.7.0"
