[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
cairo-sys-rs = "0.9.1"
gdk-pixbuf-sys = "0.9.1"
gio-sys = "0.9.1"
glib-sys = "0.9.1"
gobject-sys = "0.9.1"
pango-sys = "0.9.1"
libc = "0.2"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
v3_16 = []
v3_18 = ["v3_16"]
v3_20 = ["v3_18"]
v3_22 = ["v3_20"]
v3_24 = ["v3_22"]
dox = []

[lib]
name = "gdk_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libgdk-3"
homepage = "http://gtk-rs.org/"
keywords = ["gdk", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "gdk"
name = "gdk-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.9.1"

[package.metadata.docs.rs]
features = ["dox"]
