[build-dependencies]
pkg-config = "0.3.5"

[dependencies]
bitflags = "0.3"
libc = "0.1"

[lib]
name = "glib_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to glib"
documentation = "http://gtk-rs.org/docs/glib_sys"
homepage = "http://gtk-rs.org/"
keywords = ["glib", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "glib"
name = "glib-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.2.1"
