[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
bitflags = "1.0"
libc = "0.2"

[dependencies.glib-sys]
path = "../glib-sys"
version = "0.2.0"

[dependencies.gobject-sys]
path = "../gobject-sys"
version = "0.2.0"

[features]
dox = []
v3_2 = []

[lib]
name = "gmime_sys"

[package]
build = "build.rs"
links = "gmime"
name = "gmime-sys"
version = "0.2.0"
