
[build-dependencies]
pkg-config = "0.3.5"

[dependencies]
bitflags = "0.3"
libc = "0.1"

[dependencies.glib-sys]
path = "../glib-sys"
version = "0.2.0"

[lib]
name = "gobject_sys"

[package]
build = "build.rs"
description = "FFI bindings to gobject"
documentation = "http://gtk-rs.org/docs/gobject_sys"
homepage = "http://gtk-rs.org/"
keywords = ["gobject", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "gobject"
name = "gobject-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.2.0"
