[build-dependencies]
pkg-config = "0.3.5"

[dependencies]
bitflags = "0.3"
glib-sys = "0.2.0"
libc = "0.1"

[lib]
name = "gobject_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to gobject"
documentation = "http://gtk-rs.org/docs/gobject_sys"
homepage = "http://gtk-rs.org/"
keywords = ["gobject", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "gobject"
name = "gobject-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.2.0"
