[build-dependencies]
pkg-config = "0.3.7"

[build-dependencies.metadeps]
version = "1.1"
git = "https://github.com/gdesmott/metadeps.git"
branch = "wip"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
path = "../glib-sys"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
v2_44 = []
v2_46 = ["v2_44"]
v2_54 = ["v2_46"]
v2_58 = ["v2_54"]
v2_62 = ["v2_58"]
dox = []

[lib]
name = "gobject_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libgobject-2.0"
homepage = "http://gtk-rs.org/"
keywords = ["gobject", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "gobject"
name = "gobject-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.9.1"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.pkg-config.gobject_2_0]
name = "gobject-2.0"
version = "2.42"

[package.metadata.pkg-config.gobject_2_0.feature-versions]
v2_44 = "2.44"
v2_46 = "2.46"
v2_54 = "2.54"
v2_58 = "2.58"
v2_62 = "2.62"
