[build-dependencies]
pkg-config = "0.3.7"

[build-dependencies.metadeps]
version = "1.1"
git = "https://github.com/gdesmott/metadeps.git"
branch = "wip"

[dependencies]
libc = "0.2"

[dependencies.cairo-sys-rs]
git = "https://github.com/gtk-rs/cairo"

[dependencies.gdk4-sys]
path = "../gdk4-sys"

[dependencies.glib-sys]
path = "../glib-sys"

[dependencies.gobject-sys]
path = "../gobject-sys"

[dependencies.graphene-sys]
git = "https://github.com/gtk-rs/graphene"

[dependencies.pango-sys]
path = "../pango-sys"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
dox = []

[lib]
name = "gsk4_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libgsk-4"
homepage = "http://gtk-rs.org/"
keywords = ["gsk", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "gsk4"
name = "gsk4-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.1.0"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.pkg-config.gtk4]
name = "gtk4"
version = "3.94"

[package.metadata.pkg-config.gtk4.feature-versions]
