[package]
name = "gtk-sys"
version = "0.0.2"
links = "gtk"
build = "build.rs"

[package.metadata.docs.rs]
features = ["dox"]

[lib]
name = "gtk_sys"

[dependencies]
atk-sys = "0.9.1"
cairo-sys-rs = "0.9.1"
gdk-pixbuf-sys = "0.9.1"
gdk-sys = "0.9.1"
gio-sys = "0.9.1"
glib-sys = "0.9.1"
gobject-sys = "0.9.1"
pango-sys = "0.9.1"
libc = "0.2"

[build-dependencies]
pkg-config = "0.3.7"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
v3_16 = []
v3_18 = ["v3_16"]
v3_20 = ["v3_18"]
v3_22 = ["v3_20"]
v3_22_6 = ["v3_22"]
v3_22_26 = ["v3_22_6"]
v3_22_27 = ["v3_22_26"]
v3_22_29 = ["v3_22_27"]
v3_22_30 = ["v3_22_29"]
v3_24 = ["v3_22_30"]
v3_24_8 = ["v3_24"]
v3_24_9 = ["v3_24_8"]
dox = []
