[package]
name = "pango-sys-test"
version = "0.1.0"
authors = ["Tomasz Miąsko <tomasz.miasko@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
pango-sys = { path = "../pango-sys" }
libc = "0.2"

[build-dependencies]
ctest = { git = "https://github.com/gtk-rs/gir-ctest", branch = "master" }
shell-words = "0.1.0"
