[build-dependencies]
pkg-config = "0.3.7"

[dependencies]
gobject-sys = "0.4.0"
glib-sys = "0.4.0"
libc = "0.2"
bitflags = "1.0"

[features]
dox = []
v1_31 = []
v1_32 = ["v1_31"]
v1_32_4 = ["v1_32"]
v1_34 = ["v1_32_4"]
v1_36_7 = ["v1_34"]
v1_38 = ["v1_36_7"]
v1_42 = ["v1_38"]

[lib]
name = "pango_sys"

[package]
name = "pango-sys"
license = "MIT"
homepage = "http://gtk-rs.org/"
links = "pango"
authors = ["The Gtk-rs Project Developers"]
description = "FFI bindings to libpango-1.0"
version = "0.4.0"
keywords = ["pango", "ffi", "gtk-rs", "gnome"]
repository = "https://github.com/gtk-rs/sys"
build = "build.rs"
