[build-dependencies]
system-deps = "1.3"

[dependencies]
glib-sys = "0.9.1"
gobject-sys = "0.9.1"
libc = "0.2"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
v1_36_7 = []
v1_38 = ["v1_36_7"]
v1_42 = ["v1_38"]
v1_44 = ["v1_42"]
dox = []

[lib]
name = "pango_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libpango-1.0"
homepage = "http://gtk-rs.org/"
keywords = ["pango", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "pango"
name = "pango-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.9.1"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.pango]
name = "pango"
version = "1.36"

[package.metadata.system-deps.pango.feature-versions]
v1_36_7 = "1.36.7"
v1_38 = "1.38"
v1_42 = "1.42"
v1_44 = "1.44"
