[build-dependencies]
system-deps = "1.3"

[dependencies]
cairo-sys-rs = "0.10.0"
glib-sys = "0.10.0"
pango-sys = "0.10.0"
libc = "0.2"

[dev-dependencies]
shell-words = "0.1.0"
tempfile = "3"

[features]
dox = []

[lib]
name = "pango_cairo_sys"

[package]
authors = ["The Gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libgtk-3"
homepage = "http://gtk-rs.org/"
keywords = ["gtk", "ffi", "gtk-rs", "gnome"]
license = "MIT"
links = "pango_cairo"
name = "pangocairo-sys"
repository = "https://github.com/gtk-rs/sys"
version = "0.11.0"

[package.metadata.docs.rs]
features = ["dox"]

[package.metadata.system-deps.pangocairo]
name = "pangocairo"
version = "1.36"

[package.metadata.system-deps.pangocairo.feature-versions]

